FIX: buttons wrap together at tablet size instead of separately.

--- a/perma_web/static/css/style-responsive.scss
+++ b/perma_web/static/css/style-responsive.scss
@@ -3976,6 +3976,10 @@ span.action {
     float: right;
     margin-left: 5px;
   }
+  .button-wrapper {
+    display:inline-block;
+    float:right;
+  }
 }
 
 #add-member {
